# docs/swagger.yaml
@@ -147,6 +147,21 @@ paths:
         - Practices = 2
         - Exercises = 3
       parameters:
+      - description: titulacion de las horas a obtener
+        in: query
+        name: titulacion
+        required: true
+        type: string
+      - description: curso de las horas a obtener
+        in: query
+        name: curso
+        required: true
+        type: integer
+      - description: grupo de las horas a obtener
+        in: query
+        name: grupo
+        required: true
+        type: integer
       - description: Entry to create
         in: body
         name: entry
